# gtoy

./: ChangeLog  HACKING  Makefile.am  configure.ac
examples/: Makefile.am
examples/example-01/: Makefile.am  main.c  pizza.c  pizza.h
examples/example-02/: Makefile.am  main.c  margarhita.c  margarhita.h  pizza.c  pizza.h
examples/example-03/: Makefile.am  bulldog.c  bulldog.h  cat.c  cat.h  dog.c  dog.h  main.c
examples/example-04/: Makefile.am  bird.c  bird.h  crow.c  crow.h  flying.c  flying.h  main.c
examples/example-05/: Makefile.am  box.c  box.h  main.c
examples/example-06/: Makefile.am  box.c  box.h  container.c  container.h  main.c
examples/example-07/: Makefile.am  flute.c  flute.h  guitar.c  guitar.h  instrument.c  instrument.h  main.c
examples/example-08/: Makefile.am  dragon.c  dragon.h  main.c  monster.c  monster.h
examples/example-09/: Makefile.am  dispatcher.c  dispatcher.h  main.c  tv.c  tv.h
examples/example-10/: Makefile.am  main.c
pkgconfig/: Makefile.am  gtoy.pc.in
src/: Makefile.am  gtoy-errors.h  gtoy-interface-type.c  gtoy-interface-type.h  gtoy-macros.c  gtoy-macros.h  gtoy-magic.h  gtoy-object-type.c  gtoy-object-type.h  gtoy-object.c  gtoy-object.h  gtoy-types.h  gtoy.h
