if BUILD_EXAMPLES
EXAMPLES 		= example-01 	\
			  example-02 	\
			  example-03 	\
			  example-04 	\
			  example-05 	\
			  example-06 	\
			  example-07 	\
			  example-08 	\
			  example-09 	\
			  example-10
else
EXAMPLES =
endif

SUBDIRS			= $(EXAMPLES)

DIST_SUBDIRS		= example-01 	\
			  example-02 	\
			  example-03 	\
			  example-04 	\
			  example-05 	\
			  example-06 	\
			  example-07 	\
			  example-08 	\
			  example-09 	\
			  example-10

MAINTAINERCLEANFILES	= Makefile.in

